--- a/info.yaml
+++ b/info.yaml
@@ -8,11 +8,11 @@ project:
   source_files:        
     - fm_modulator.v
     - i2s_rx.v
-    - tt_fm_transmitter.v
-  top_module:  "tt_fm_transmitter"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
+    - tt_um_fm_transmitter.v
+  top_module:  "tt_um_fm_transmitter"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x1"    # Valid values: 1x1, 1x2, 2x2, 4x2 or 8x2
+  tiles: "8x2"    # Valid values: 1x1, 1x2, 2x2, 4x2 or 8x2
 
 # Keep a track of the submission yaml
 yaml_version: 4
