--- a/info.yaml
+++ b/info.yaml
@@ -31,11 +31,17 @@ documentation:
 
 # Longer description of how the project works. You can use standard markdown format.
   how_it_works: |
-    TODO: How the modulation, higher Nyquist zone and R-2R DAC work
+    Our design takes an audio signal and modulates it to a higher carrier frequency, using [*FM modulation*](https://en.wikipedia.org/wiki/Frequency_modulation). The modulator in our design is based on a [*numerically controlled oscillator*](https://en.wikipedia.org/wiki/Numerically_controlled_oscillator) (NCO) with several modifications.
+    
+    The *frequency control word*, which increments the *phase accumulator*, is being added with the audio signal. This results in the phase increments proportional to the current audio sample level. The variation directly determines the actual shift of the output signal frequency. For the conversion of phase to a harmonic signal (sine wave) NCOs usually use look-up tables or [*CORDIC algorithm*](https://en.wikipedia.org/wiki/CORDIC). However, both of these methods are resource heavy, therefore we had to come up with a very rough linearized approximation of sine function. The main upside of this approach is the lightweight implementation which utilizes  only simple bit-shifting and addition.
+    
+    ![Our harmonic function approximation](doc/figureApproximation.pdf)
+    
+    
 
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   how_to_test:  |
-    TODO: HW description, schematic, how to make it work
+    TODO: HW description, schematic, how to make it work, upozorneni na Local regulations
 
 # A description of what the inputs do (e.g. red button, SPI CLK, SPI MOSI, etc).
   inputs:               
