--- a/info.yaml
+++ b/info.yaml
@@ -11,10 +11,19 @@ project:
     - tt_um_fm_transmitter.v
     - cdc_slow2fast_bus.v
     - spi_config.v
+    - usb_audio_top.v
+    - usbfs_bitlevel.v
+    - usbfs_core_top.v
+    - usbfs_debug_monitor.v
+    - usbfs_debug_uart_tx.v
+    - usbfs_packet_rx.v
+    - usbfs_packet_tx.v
+    - usbfs_transaction.v
+
   top_module:  "tt_um_fm_transmitter"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x1"    # Valid values: 1x1, 1x2, 2x2, 4x2 or 8x2
+  tiles: "8x2"    # Valid values: 1x1, 1x2, 2x2, 4x2 or 8x2
 
 # Keep a track of the submission yaml
 yaml_version: 4
